# ai-video-editor

./: .env.example  .gitignore  CHANGELOG.md  CHANGES-APPLIED.md  CRITICAL-FIX-APPLIED.md  GIT-SETUP.md  MEDIA-IMPORT-ISSUE.md  PIPELINE_AUDIT_AND_PLAN.md  QUICKSTART-AI.md  README.md  SETUP-COMPLETE.md  SETUP.md  eslint.config.mjs  index.html  package-lock.json  package.json  remotion.config.ts  test_export.fcpxml  tsconfig.app.json  tsconfig.json  vite.config.ts
desktop/: README.md
docs/: ALL-FIXES-APPLIED.md  ERROR-FIX-MEDIA-INGEST.md  FINAL-SUMMARY.md  IMPROVEMENTS-LOG.md  README.md  agentic-video-editor-prd.md  ai-models-installed.md  ai-models-setup.md  error-logging-guide.md  final-build-summary.md  how-to-use-editor.md  new-ui-guide.md  release-checklist.md  running-desktop-app.md  task-list.md  template-audit-baseline.md  test-results.md  ui-migration-complete.md  ui-redesign-summary.md  web-testing-log.md  web-version-guide.md
samples/: test.mp4.16k.json
scripts/: agent_loop.mjs  agentic_editing_pipeline.mjs  ai_image_generation.mjs  annotate_transcript.mjs  auto_setup.mjs  bundle-node.sh  check_template_registration.mjs  clean_workspace.mjs  codex.mjs  cut_plan_only.mjs  edit_now_pipeline.mjs  export_fcpxml.mjs  fetch_free_assets.mjs  first_run_checks.mjs  fix-mockup-bg.mjs  generate_image.mjs  global_video_analysis.mjs  hardware_diagnostics.mjs  high_retention_pipeline.mjs  input_quality_gate.mjs  install-backend-service.sh  macos_notarize_and_staple.sh  (+15 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+166 files in other folders)
