[package]
name = "lapaas-ai-editor-desktop"
version = "0.1.0"
description = "Lapaas AI Editor desktop shell"
authors = ["Lapaas"]
license = "UNLICENSED"
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[features]
default = []

